--- a/MusicStore/PresentationLayer/EmployeeList.xaml
+++ b/MusicStore/PresentationLayer/EmployeeList.xaml
@@ -23,6 +23,6 @@
                 <Button x:Name="btnEmployeeList" HorizontalAlignment="Left" Height="30" Width="150" FontSize="15" Background="LightGray">Employee List</Button>
             </Grid>
         </StackPanel>
-        <DataGrid x:Name="dgEmployeeList" Grid.Row="1"  SelectionMode="Single" SelectionUnit="FullRow" IsReadOnly="True" Loaded="dgEmployeeList_Loaded" MouseDoubleClick="dgEmployeeList_MouseDoubleClick"/>
+        <DataGrid x:Name="dgEmployeeList" Grid.Row="1"  SelectionMode="Single" SelectionUnit="FullRow" IsReadOnly="True" Loaded="dgEmployeeList_Loaded"/>
     </Grid>
 </Page>
