--- a/MusicStore/PresentationLayer/pgUserProfile.xaml
+++ b/MusicStore/PresentationLayer/pgUserProfile.xaml
@@ -5,10 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PresentationLayer"
       mc:Ignorable="d" 
-      d:DesignHeight="573" d:DesignWidth="850"
-      Title="pgUserProfile">
+      d:DesignHeight="576" d:DesignWidth="830"
+      Title="pgUserProfile" Loaded="Page_Loaded">
 
     <Grid>
+        <!--<Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+        </Grid.RowDefinitions>-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -27,6 +31,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="images\SideBarBackground.jpg"/>
@@ -35,30 +40,43 @@
         <Label Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblUserTypeID" Content="EmployeeID: "  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <Label x:Name="lblUserID" Content="EmployeeID" FontWeight="DemiBold" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="120"/>
        
-        <TextBox x:Name="txtFirstName" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="txtFirstName" IsEnabled="False" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="First Name" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2 " VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125" HorizontalAlignment="Left"/>
-        
-        <TextBox x:Name="txtLastName" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <TextBox x:Name="txtLastName" IsEnabled="False" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Last Name" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
-        
-        <TextBox x:Name="txtAddress" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <TextBox x:Name="txtAddress" IsEnabled="False" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Address" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
-        
-        <TextBox x:Name="txtState" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <TextBox x:Name="txtState" IsEnabled="False" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="State" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
-        
-        <TextBox x:Name="txtZipcode" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <TextBox x:Name="txtZipcode" IsEnabled="False" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="ZipCode" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
-        
-        <TextBox x:Name="txtPhoneNumber" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <TextBox x:Name="txtPhoneNumber" IsEnabled="False" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Phone Number" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
         
         <Label Content="Assigned Roles" Grid.Column="6" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <ListBox x:Name="lbUnassignedRoles" Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="3"  BorderBrush="Black" BorderThickness="2 2 2 2"/>
-        
-        <Button Content="Assign" Grid.Row="2" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
-        <Button Content="Unassign" Grid.Row="2" Grid.Column="8" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
-        <ListBox x:Name="lbAssignedRoles" Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="2 2 2 2"  />
+        <ListBox x:Name="lstUnassignedRoles" IsEnabled="False" Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="3"  BorderBrush="Black" BorderThickness="2 2 2 2"/>
+
+        <Button x:Name="btnAssign" Content="Assign" IsEnabled="False" Grid.Row="2" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <Button x:Name="btnUnassign" Content="Unassign" IsEnabled="False" Grid.Row="2" Grid.Column="8" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <ListBox x:Name="lstAssignedRoles" IsEnabled="False" Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="2 2 2 2"  />
         <Label Content="Unassigned Roles" Grid.Row="4" Grid.Column="6" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Orientation="Horizontal">
+            <Grid Width="830" Background="LightGray">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90"></ColumnDefinition>
+                    <ColumnDefinition Width="90"></ColumnDefinition>
+                    <ColumnDefinition Width="540"></ColumnDefinition>
+                    <ColumnDefinition Width="90"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="btnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnBack_Click">Back</Button>
+                <Button x:Name="btnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click">Edit</Button>
+               <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="btnSave_Click" />
+            </Grid>
+        </StackPanel>
     </Grid>
 </Page>
