--- a/MusicStore/PresentationLayer/UpdatePassword.xaml
+++ b/MusicStore/PresentationLayer/UpdatePassword.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PresentationLayer"
         mc:Ignorable="d"
-        Title="Update Password" Height="300" Width="450" WindowStartupLocation="CenterScreen">
+        Title="Update Password" Height="300" Width="450" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"></RowDefinition>
