--- a/MusicStore/PresentationLayer/pgLogin.xaml
+++ b/MusicStore/PresentationLayer/pgLogin.xaml
@@ -26,12 +26,12 @@
         <TextBox x:Name="txtEmail" Grid.Row="1" Grid.Column="1" Height="30" Width="300" HorizontalAlignment="Left" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="Sys.Admin@music.com"/>
         <Label Foreground="White" FontSize="25" Grid.Column="0" Grid.Row="2" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0 0 30 0">Password</Label>
         <PasswordBox x:Name="pwdPassword" Grid.Row="2" Grid.Column="1" Height="30" Width="300" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Password="password"/>
-        <Button Grid.ColumnSpan="2" Grid.Row="3" Height="45" Width="200" Click="BtnLogin_Click" >Login
+        <Button x:Name="btnLogin" Grid.ColumnSpan="2" Grid.Row="3" Height="45" Width="200" Click="BtnLogin_Click" >Login
             <Button.Effect>
                 <DropShadowEffect Color="#FF003164" BlurRadius="10"/>
             </Button.Effect>
         </Button>
-        <Button x:Name="btnLogin" Grid.ColumnSpan="2" Grid.Row="4" Height="20" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Button x:Name="btnForgotPassword" Grid.ColumnSpan="2" Grid.Row="4" Height="20" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top" Click="btnForgotPassword_Click">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="10" Color="#FF003164" />
             </Button.Effect> Forgot Password
