--- a/MusicStore/PresentationLayer/pgMain.xaml
+++ b/MusicStore/PresentationLayer/pgMain.xaml
@@ -34,7 +34,7 @@
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task4</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task5</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task6</Button>
-            <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task7</Button>
+            <Button x:Name="Cart" Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="Cart_Click">Cart</Button>
         </StackPanel>
         <Frame x:Name="tabFrame" Grid.Column="2" Grid.Row="2" BorderBrush="Black" BorderThickness="2 2 2 0"/>
 
