--- a/MusicStore/PresentationLayer/pgCart.xaml
+++ b/MusicStore/PresentationLayer/pgCart.xaml
@@ -34,7 +34,7 @@
             <ImageBrush ImageSource="images\SideBarBackground.jpg"/>
         </Grid.Background>
 
-        <Label Grid.Column="1" x:Name="lblInstrument" Content="Cart"  FontSize="30" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,20,0,40"/>
+        <Label Grid.Column="0" Grid.ColumnSpan="2" Content="Invoice"  FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,40"/>
         <Label x:Name="lblCustomer" Content="Customer:" FontWeight="DemiBold" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"  Width="130"/>
         <TextBox x:Name="txtCustomer"  Height="26" FontSize="16" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"  Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="left" Width="239" Margin="0,42"/>
 
@@ -50,11 +50,10 @@
                     <ColumnDefinition Width="90"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="btnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray">Back</Button>
-                <Button x:Name="btnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" >Edit</Button>
-                <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0"/>
+                <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Margin="1,0,-25,0"/>
             </Grid>
         </StackPanel>
-        <DataGrid Grid.ColumnSpan="8" Grid.Column="1" HorizontalAlignment="Left" Height="327" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Top" Width="664"/>
+        <DataGrid x:Name="dgCart" Grid.ColumnSpan="8" Grid.Column="1" HorizontalAlignment="Left" Height="327" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Top" Width="664" Loaded="dgCart_Loaded"/>
         <TextBox x:Name="txtTax" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,8,0,75" />
         <TextBox x:Name="txtTotal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,39,0,44" />
         <Label Content="Tax" FontSize="16" Grid.Column="6" HorizontalAlignment="Right" Margin="41,5,0,0" Grid.Row="4" VerticalAlignment="Top"/>
