--- a/MusicStore/PresentationLayer/UpdatePassword.xaml
+++ b/MusicStore/PresentationLayer/UpdatePassword.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="PresentationLayer.frmFirstTimeUpdatePassword"
+﻿<Window x:Class="PresentationLayer.FrmFirstTimeUpdatePassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PresentationLayer"
         mc:Ignorable="d"
         Title="Update Password" Height="300" Width="450" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
@@ -18,11 +17,12 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label x:Name="CurrentPassword" Grid.Column="0" Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="20">Current Password</Label>
-        <PasswordBox x:Name="pwdCurrentPassword" Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
+        <PasswordBox x:Name="PwdCurrentPassword" Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
         <Label x:Name="NewPassword" Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="20">New Password</Label>
-        <PasswordBox x:Name="pwdNewPassword" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
+        <PasswordBox x:Name="PwdNewPassword" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
         <Label x:Name="RetypePassword" Grid.Column="0" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="20">Retype Password</Label>
-        <PasswordBox x:Name="pwdRetypePassword" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
-        <Button x:Name="btnSubmit" Content="Submit" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="3" Height="40" Width="100" Click="btnSubmit_Click" />
+        <PasswordBox x:Name="PwdRetypePassword" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="200"></PasswordBox>
+        <Button x:Name="BtnSubmit" Content="Submit" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2"
+                Grid.Column="0" Grid.Row="3" Height="40" Width="100" Click="btnSubmit_Click" />
     </Grid>
 </Window>
