--- a/MusicStore/PresentationLayer/pgAdministration.xaml
+++ b/MusicStore/PresentationLayer/pgAdministration.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="PresentationLayer.pgAdministration"
+﻿<Page x:Class="PresentationLayer.PgAdministration"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PresentationLayer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="576" d:DesignWidth="830"
       Title="pgAdministration">
@@ -13,8 +12,8 @@
             <RowDefinition></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dgEmployeeList"  SelectionMode="Single" SelectionUnit="FullRow" IsReadOnly="True" Loaded="dgEmployeeList_Loaded" Grid.RowSpan="2" MouseDoubleClick="dgEmployeeList_MouseDoubleClick" />
-        <StackPanel Grid.Row="2" Orientation="Horizontal">
+        <DataGrid x:Name="DgEmployeeList"  SelectionMode="Single" SelectionUnit="FullRow" IsReadOnly="True" Loaded="dgEmployeeList_Loaded" Grid.RowSpan="2" MouseDoubleClick="dgEmployeeList_MouseDoubleClick" />
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
             <Grid Width="830" Background="LightGray">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="90"></ColumnDefinition>
@@ -24,11 +23,11 @@
                     <ColumnDefinition Width="390"></ColumnDefinition>
                     <ColumnDefinition Width="90"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btnAdd" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnAdd_Click" >Add</Button>
-                <Button x:Name="btnEdit" Width="60" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click">Edit</Button>
-                <Button x:Name="btnDelete" Height="30" Width="90" FontSize="15" Grid.Column="2" HorizontalContentAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="LightGray" HorizontalAlignment="Left" Click="btnDelete_Click">De-Activate</Button>
-                <Button x:Name="btnReActivate" Height="30" Width="90" FontSize="15" Grid.Column="3" HorizontalContentAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="LightGray" HorizontalAlignment="Left" Visibility="Hidden" Click="btnReActivate_Click">Re-Activate</Button>
-                <CheckBox x:Name="chkInActive" Grid.Column="5" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,8,-5,8" Content="Show Inactive" Checked="chkInActive_Checked" Width="95" Unchecked="chkInActive_Unchecked"/>
+                <Button x:Name="BtnAdd" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnAdd_Click" >Add</Button>
+                <Button x:Name="BtnEdit" Width="60" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click">Edit</Button>
+                <Button x:Name="BtnDelete" Height="30" Width="90" FontSize="15" Grid.Column="2" HorizontalContentAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="LightGray" HorizontalAlignment="Left" Click="btnDelete_Click">De-Activate</Button>
+                <Button x:Name="BtnReActivate" Height="30" Width="90" FontSize="15" Grid.Column="3" HorizontalContentAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="LightGray" HorizontalAlignment="Left" Visibility="Hidden" Click="btnReActivate_Click">Re-Activate</Button>
+                <CheckBox x:Name="ChkInActive" Grid.Column="5" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,8,-5,8" Content="Show Inactive" Checked="chkInActive_Checked" Width="95" Unchecked="chkInActive_Unchecked"/>
             </Grid>
         </StackPanel>
     </Grid>
