--- a/MusicStore/PresentationLayer/pgCart.xaml
+++ b/MusicStore/PresentationLayer/pgCart.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="PresentationLayer.pgCart"
+﻿<Page x:Class="PresentationLayer.PgCart"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PresentationLayer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="576" d:DesignWidth="830"
       Title="pgCart">
@@ -35,13 +34,14 @@
         </Grid.Background>
 
         <Label Grid.Column="0" Grid.ColumnSpan="2" Content="Invoice"  FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,40"/>
-        <Label x:Name="lblCustomer" Content="Customer:" FontWeight="DemiBold" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"  Width="130"/>
-        <TextBox x:Name="txtCustomer"  Height="26" FontSize="16" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"  Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="left" Width="239" Margin="0,42"/>
+        <Label x:Name="LblCustomer" Content="Customer:" FontWeight="DemiBold" Grid.Column="2" Grid.Row="0"
+               Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"  Width="130"/>
+        <TextBox x:Name="TxtCustomer"  Height="26" FontSize="16" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"  Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="left" Width="239" Margin="0,42"/>
 
-        <Label Grid.Column="6" x:Name="lblPrice" Content="Employee:"  FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtPriceAmount"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="0" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,42"/>
+        <Label Grid.Row="0" Grid.Column="6" x:Name="LblPrice" Content="Employee:"  FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox x:Name="TxtPriceAmount"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="0" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,42"/>
 
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Orientation="Horizontal">
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Grid.Column="0" Orientation="Horizontal">
             <Grid Width="830" Background="LightGray">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="90"></ColumnDefinition>
@@ -49,13 +49,13 @@
                     <ColumnDefinition Width="540"></ColumnDefinition>
                     <ColumnDefinition Width="90"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray">Back</Button>
-                <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Margin="1,0,-25,0"/>
+                <Button x:Name="BtnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray">Back</Button>
+                <Button x:Name="BtnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="3" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Margin="1,0,-25,0"/>
             </Grid>
         </StackPanel>
-        <DataGrid x:Name="dgCart" Grid.ColumnSpan="8" Grid.Column="1" HorizontalAlignment="Left" Height="327" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Top" Width="664" Loaded="dgCart_Loaded"/>
-        <TextBox x:Name="txtTax" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,8,0,75" />
-        <TextBox x:Name="txtTotal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,39,0,44" />
+        <DataGrid x:Name="DgCart" Grid.ColumnSpan="8" Grid.Column="1" HorizontalAlignment="Left" Height="327" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Top" Width="664" Loaded="dgCart_Loaded"/>
+        <TextBox x:Name="TxtTax" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,8,0,75" />
+        <TextBox x:Name="TxtTotal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="26" FontSize="16"  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="166" Margin="0,39,0,44" />
         <Label Content="Tax" FontSize="16" Grid.Column="6" HorizontalAlignment="Right" Margin="41,5,0,0" Grid.Row="4" VerticalAlignment="Top"/>
         <Label Content="Total" FontSize="16" Grid.Column="6" HorizontalAlignment="Right" Margin="41,34,0,0" Grid.Row="4" VerticalAlignment="Top"/>
     </Grid>
