--- a/MusicStore/PresentationLayer/pgInstrumentDetail.xaml
+++ b/MusicStore/PresentationLayer/pgInstrumentDetail.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="PresentationLayer.pgInstrumentDetail"
+﻿<Page x:Class="PresentationLayer.PgInstrumentDetail"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PresentationLayer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="576" d:DesignWidth="830"
       Title="pgUserProfile" Loaded="Page_Loaded">
@@ -34,36 +33,38 @@
             <ImageBrush ImageSource="images\SideBarBackground.jpg"/>
         </Grid.Background>
 
-        <Label Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblInstrument" Content="InstrumentID:"  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <Label x:Name="lblInstrumentID" Content="InstrumentID" FontWeight="DemiBold" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="130"/>
-        <TextBox x:Name="txtInstrumentID" IsEnabled="false" Visibility="Hidden" Height="27" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
+        <Label Grid.Column="0" Grid.ColumnSpan="2" x:Name="LblInstrument" Content="InstrumentID:"  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label x:Name="LblInstrumentId" Content="InstrumentID" FontWeight="DemiBold" Grid.Column="2" Grid.Row="0"
+               Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="130"/>
+        <TextBox x:Name="TxtInstrumentId" IsEnabled="false" Visibility="Hidden" Height="27" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
 
 
         <Label Content="Type" FontWeight="DemiBold" FontSize="16" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2 " VerticalAlignment="Top" Padding="0 0 0 0" Margin="0,20,0,16" Width="125" HorizontalAlignment="Left"/>
-        <ComboBox x:Name="cmbType" FontSize="16"  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False" SelectionChanged="cmbType_SelectionChanged"/>
+        <ComboBox x:Name="CmbType" FontSize="16"  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False" SelectionChanged="cmbType_SelectionChanged"/>
 
         <Label Content="Brand" FontWeight="DemiBold" FontSize="16" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0 0 0 0" Margin="0,20,0,16" Width="125"/>
-        <ComboBox x:Name="cmbBrand" FontSize="16" Visibility="Visible" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False"/>
+        <ComboBox x:Name="CmbBrand" FontSize="16" Visibility="Visible" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False"/>
 
         <Label Content="Status" FontWeight="DemiBold" FontSize="16" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,20,0,16" Padding="0 0 0 0"  Width="125"/>
-        <ComboBox x:Name="cmbStatus" FontSize="16" Visibility="Visible" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False"/>
+        <ComboBox x:Name="CmbStatus" FontSize="16" Visibility="Visible" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="162.5" Padding="5,0,0,0" Margin="0,45" IsEnabled="False"/>
 
-        <Label Grid.Column="6" x:Name="lblPrice" Content="Price:"  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <Label x:Name="lblPriceAmount" Visibility="Visible"  Content="PriceAmount" FontWeight="DemiBold" Grid.Column="7" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="130"/>
-        <TextBox x:Name="txtPriceAmount" IsEnabled="false" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="Hidden" Height="27" FontSize="16"  Grid.Row="0" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
+        <Label Grid.Row="0" Grid.Column="6" x:Name="LblPrice" Content="Price:"  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label x:Name="LblPriceAmount" Visibility="Visible"  Content="PriceAmount" FontWeight="DemiBold" Grid.Column="7"
+               Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="130"/>
+        <TextBox x:Name="TxtPriceAmount" IsEnabled="false" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="Hidden" Height="27" FontSize="16"  Grid.Row="0" Grid.Column="7" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
 
         <Label Content="Rental Term" FontWeight="DemiBold" FontSize="16" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,20,0,16" Padding="0 0 0 0"  Width="125"/>
-        <TextBox x:Name="txtRentalTerm" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
+        <TextBox x:Name="TxtRentalTerm" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
 
         <Label Content="Rental Fee" FontWeight="DemiBold" FontSize="16" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,20,0,16" Padding="0 0 0 0"  Width="125"/>
-        <TextBox x:Name="txtRentalFee" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
+        <TextBox x:Name="TxtRentalFee" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
 
         <Label Content="Family" FontWeight="DemiBold" FontSize="16" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,20,0,16" Padding="0 0 0 0"  Width="125"/>
-        <TextBox x:Name="txtFamily" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
+        <TextBox x:Name="TxtFamily" IsEnabled="False" Height="27" FontSize="16"  Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="left" Width="162.5"/>
 
         <Image Grid.ColumnSpan="3" Grid.Column="6" HorizontalAlignment="Left" Height="327" Grid.Row="1" VerticalAlignment="Top" Width="249" Grid.RowSpan="3"/>
 
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Orientation="Horizontal">
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Grid.Column="0" Orientation="Horizontal">
             <Grid Width="830" Background="LightGray">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="90"></ColumnDefinition>
@@ -71,9 +72,9 @@
                     <ColumnDefinition Width="540"></ColumnDefinition>
                     <ColumnDefinition Width="90"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnBack_Click">Back</Button>
-                <Button x:Name="btnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click" >Edit</Button>
-                <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="btnSave_Click" />
+                <Button x:Name="BtnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnBack_Click">Back</Button>
+                <Button x:Name="BtnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click" >Edit</Button>
+                <Button x:Name="BtnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="3" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="btnSave_Click" />
             </Grid>
         </StackPanel>
     </Grid>
