--- a/MusicStore/PresentationLayer/pgMain.xaml
+++ b/MusicStore/PresentationLayer/pgMain.xaml
@@ -2,8 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PresentationLayer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="761" d:DesignWidth="1000"
       Title="MainPage">
@@ -24,23 +23,25 @@
                 <MenuItem Header="Exit"/>
             </MenuItem>
         </Menu>
-        <Image x:Name="TitleBarBackground" Source="images\TitleBarBackground.jpg" Grid.ColumnSpan="2" Grid.Row="1" Stretch="Fill" />
-        <Image x:Name="imgLogo" Source="images\MusicianHideAwayLogo.png" Grid.ColumnSpan="2" Grid.Row="1"/>
-        <Image x:Name="SideBarBackgrund" Source="images\SideBarBackground.jpg" Grid.Column="0" Grid.Row="2" Stretch="UniformToFill" Panel.ZIndex="-5" OpacityMask="#FF9E9E9E"/>
-        <StackPanel x:Name="spButtons" Grid.RowSpan="3" Grid.Row="2" Grid.Column="0">
-            <Button x:Name="btnAdministration" Height="50" BorderBrush="Black" BorderThickness="0 2 0 0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="btnAdministration_Click">Administration</Button>
-            <Button x:Name="btnInventory" Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="btnInventory_Click">Inventory</Button>
+        <Image x:Name="TitleBarBackground" Source="images\TitleBarBackground.jpg" Grid.ColumnSpan="2" Grid.Column="0"
+               Grid.Row="1" Stretch="Fill" />
+        <Image x:Name="ImgLogo" Source="images\MusicianHideAwayLogo.png" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1"/>
+        <Image x:Name="SideBarBackground" Source="images\SideBarBackground.jpg" Grid.Column="0" Grid.Row="2" Stretch="UniformToFill" Panel.ZIndex="-5" OpacityMask="#FF9E9E9E"/>
+        <StackPanel x:Name="SpButtons" Grid.RowSpan="2" Grid.Row="2" Grid.Column="0">
+            <Button x:Name="BtnAdministration" Height="50" BorderBrush="Black" BorderThickness="0 2 0 0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="btnAdministration_Click">Administration</Button>
+            <Button x:Name="BtnInventory" Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="btnInventory_Click">Inventory</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task3</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task4</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task5</Button>
             <Button Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand">Task6</Button>
             <Button x:Name="Cart" Height="50" BorderThickness="1,0,1,0" Background="{x:Null}" FontWeight="DemiBold" FontSize="15" Cursor="Hand" Click="Cart_Click">Cart</Button>
         </StackPanel>
-        <Frame x:Name="tabFrame" Grid.Column="2" Grid.Row="2" BorderBrush="Black" BorderThickness="2 2 2 0"/>
+        <Frame x:Name="TabFrame" Grid.Column="1" Grid.Row="2" BorderBrush="Black" BorderThickness="2 2 2 0"/>
 
-        <StatusBar BorderBrush="Black" BorderThickness="2 2 2 2" x:Name="sbMessages" Grid.ColumnSpan="2" Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Center">
+        <StatusBar BorderBrush="Black" BorderThickness="2 2 2 2" x:Name="SbMessages" Grid.ColumnSpan="2" Grid.Column="0"
+                   Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Center">
             <StatusBarItem>
-                <Label x:Name="lblMessages"  HorizontalContentAlignment="Left" FontWeight="DemiBold" Width="985">Here is where a message will go</Label>
+                <Label x:Name="LblMessages"  HorizontalContentAlignment="Left" FontWeight="DemiBold" Width="985">Here is where a message will go</Label>
             </StatusBarItem>
         </StatusBar>
     </Grid>
