--- a/MusicStore/PresentationLayer/pgUserProfile.xaml
+++ b/MusicStore/PresentationLayer/pgUserProfile.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="PresentationLayer.pgUserProfile"
+﻿<Page x:Class="PresentationLayer.PgUserProfile"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PresentationLayer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="576" d:DesignWidth="830"
       Title="pgUserProfile" Loaded="Page_Loaded">
@@ -37,35 +36,37 @@
             <ImageBrush ImageSource="images\SideBarBackground.jpg"/>
         </Grid.Background>
         
-        <Label Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblUserTypeID" Content="EmployeeID: "  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <Label x:Name="lblUserID" Content="EmployeeID" FontWeight="DemiBold" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="120"/>
+        <Label Grid.Column="0" Grid.ColumnSpan="2" x:Name="LblUserTypeId" Content="EmployeeID: "  FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label x:Name="LblUserId" Content="EmployeeID" FontWeight="DemiBold" Grid.Column="2" Grid.Row="0"
+               Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"  Width="120"/>
        
-        <TextBox x:Name="txtFirstName" IsEnabled="False" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtFirstName" IsEnabled="False" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="First Name" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2 " VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125" HorizontalAlignment="Left"/>
 
-        <TextBox x:Name="txtLastName" IsEnabled="False" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtLastName" IsEnabled="False" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Last Name" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
 
-        <TextBox x:Name="txtAddress" IsEnabled="False" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtAddress" IsEnabled="False" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Address" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
 
-        <TextBox x:Name="txtState" IsEnabled="False" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtState" IsEnabled="False" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="State" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
 
-        <TextBox x:Name="txtZipcode" IsEnabled="False" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtZipcode" IsEnabled="False" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="ZipCode" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
 
-        <TextBox x:Name="txtPhoneNumber" IsEnabled="False" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <TextBox x:Name="TxtPhoneNumber" IsEnabled="False" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2"/>
         <Label Content="Phone Number" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0 0 0 0" Margin="0,58,0,16" Width="125"/>
         
-        <Label Content="Assigned Roles" Grid.Column="6" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <ListBox x:Name="lstUnassignedRoles" IsEnabled="False" Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="3"  BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <Label Content="Assigned Roles" Grid.Column="6" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="0"
+               Grid.ColumnSpan="2"/>
+        <ListBox x:Name="LstUnassignedRoles" IsEnabled="False" Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="3"  BorderBrush="Black" BorderThickness="2 2 2 2"/>
 
-        <Button x:Name="btnAssign" Content="Assign" IsEnabled="False" Grid.Row="2" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
-        <Button x:Name="btnUnassign" Content="Unassign" IsEnabled="False" Grid.Row="2" Grid.Column="8" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
-        <ListBox x:Name="lstAssignedRoles" IsEnabled="False" Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="2 2 2 2"  />
+        <Button x:Name="BtnAssign" Content="Assign" IsEnabled="False" Grid.Row="2" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <Button x:Name="BtnUnassign" Content="Unassign" IsEnabled="False" Grid.Row="2" Grid.Column="8" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="30" BorderBrush="Black" BorderThickness="2 2 2 2"/>
+        <ListBox x:Name="LstAssignedRoles" IsEnabled="False" Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="2 2 2 2"  />
         <Label Content="Unassigned Roles" Grid.Row="4" Grid.Column="6" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Orientation="Horizontal">
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="10" Grid.Column="0" Orientation="Horizontal">
             <Grid Width="830" Background="LightGray">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="90"></ColumnDefinition>
@@ -73,9 +74,9 @@
                     <ColumnDefinition Width="540"></ColumnDefinition>
                     <ColumnDefinition Width="90"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnBack_Click">Back</Button>
-                <Button x:Name="btnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click">Edit</Button>
-               <Button x:Name="btnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="5" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="btnSave_Click" />
+                <Button x:Name="BtnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnBack_Click">Back</Button>
+                <Button x:Name="BtnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Click="btnEdit_Click">Edit</Button>
+               <Button x:Name="BtnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="3" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="btnSave_Click" />
             </Grid>
         </StackPanel>
     </Grid>
